Set Size Container

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     </div>
 
     <!--Graficas Principales-->
-    <div class="shadow container mt-5">
-        <div class="row">
+    <div class="shadow p-3 mb-5 bg-light rounded mt-4">
+        <div class="row mt-4 mb-4">
             <!-- Gráfica de Barras -->
             <div class="col-md-6">
                 <!-- Usa col-md-6 para que cada columna ocupe la mitad en dispositivos medianos y grandes -->
-                <div class="mt-4" id="barChart"></div>
+                <div id="barChart"></div>
             </div>
             <!-- Gráfica de Dona -->
-            <div class="col-md-6">
+            <div class="col-md-6 d-flex justify-content-center">
                 <!-- Usa col-md-6 para que cada columna ocupe la mitad en dispositivos medianos y grandes -->
                 <div id="chart_rendimiento"></div>
             </div>
