--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <!--Graficas Principales-->
-    <div class="shadow p-3 mb-5 bg-light rounded mt-4">
+    <div class="container shadow p-3 mb-5 bg-light rounded mt-4">
         <div class="row mt-4 mb-4">
             <!-- Gráfica de Barras -->
             <div class="col-md-6">
