--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <br><br><br><br>
             <div class="shadow p-3 mb-5 bg-light rounded mt-4">
                 <!-- Dependencia 1: TESORERIA -->
-                <div class="row mb-4">
+                <div class="row mt-4 mb-4">
                     <!-- Dependencia 1: CIUDAD -->
                     <div class="col-md-4 text-center">
                         <div class="chart-title h3">De la Ciudad</div>
