Set Elements Graph

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <br><br><br><br>
             <div class="shadow p-3 mb-5 bg-light rounded mt-4">
                 <!-- Dependencia 1: TESORERIA -->
-                <div class="row mt-4 mb-4">
+                <div class="row mt-4 mb-4 justify-content-center">
                     <!-- Dependencia 1: CIUDAD -->
-                    <div class="col-md-4 text-center">
+                    <div class="col-md-4">
                         <div class="chart-title h3">De la Ciudad</div>
                         <div id="chart_ciudad"></div>
                         <button class="ir shadow" data-producto="Ciudad">
@@ -94,6 +94,19 @@
                         </button>
                     </div>
 
+
+                </div>
+
+
+                <!-- Dependencia 4: DESARROLLO ECONÓMICO, TURÍSTICO Y ARTESANAL -->
+                <div class="row mt-4 mb-4 justify-content-center">
+                    <div class="col-md-4">
+                        <div class="chart-title h3">Legal y de Planeación</div>
+                        <div id="chart_legal"></div>
+                        <button class="ir shadow" data-producto="Legal">
+                            <img src="./img/flecha.png" Ver" />
+                        </button>
+                    </div>
                     <!-- Dependencia 3: ADMINISTRATIVO -->
                     <div class="col-md-4 text-center">
                         <div class="chart-title h3">Administrativo Financiero</div>
@@ -102,19 +115,6 @@
                             <img src="./img/flecha.png" Ver" />
                         </button>
                     </div>
-                </div>
-
-
-                <!-- Dependencia 4: DESARROLLO ECONÓMICO, TURÍSTICO Y ARTESANAL -->
-                <div class="row mt-4 mb-4 justify-content-center">
-                    <div class="col-md-4 text-center">
-                        <div class="chart-title h3">Legal y de Planeación</div>
-                        <div id="chart_legal"></div>
-                        <button class="ir shadow" data-producto="Legal">
-                            <img src="./img/flecha.png" Ver" />
-                        </button>
-                    </div>
-
                     <!-- Dependencia 5: DESARROLLO SOCIAL -->
                     <div class="col-md-4 text-center">
                         <div class="chart-title h3">Atención a Grupos Especiales</div>
