--- a/Legal.html
+++ b/Legal.html
@@ -59,6 +59,7 @@
         </div>
     </div>
     <script src="./js/GraficaLegal.js"></script>
+    <script src="./js/Hipervinculos.js"></script>
 </body>
 
 </html>
