Report 26 Feb, And Set Size Of Graph

--- a/Administrativo.html
+++ b/Administrativo.html
@@ -17,7 +17,7 @@
             <div class="container extras">
                 <img src="./img/horus-s.png" class="img-fluid justify-content-center" alt="Imagen" style="max-width: 50%; height: auto;">
             </div>
-            <h2 class="text-center mt-4 mb-4">Resumen General De Comportamiento en Atención de TATs (De la Ciudad)</h2>
+            <h2 class="text-center mt-4 mb-4">Resumen General De Comportamiento en Atención de TATs (Administrativo Financiero)</h2>
         </header>
         <div>
             <button class="ir shadow volver" data-producto="Ciudad">
@@ -28,13 +28,13 @@
                 <!-- Dependencia 1: TESORERIA -->
                 <div class="row mt-4 mb-4 justify-content-center">
                     <div class="col-md-4">
-                    <div class="chart-title">Administración</div>
+                    <div class="chart-title h3">Administración</div>
                     <div id="chart_administracion"></div>
                     </div>
 
                     <!-- Dependencia 2: ADMINISTRACIÓN -->
                     <div class="col-md-4">
-                    <div class="chart-title">Tesorería</div>
+                    <div class="chart-title h3">Tesorería</div>
                     <div id="chart_tesoreria"></div>
                     </div>
 
