--- a/Atencion.html
+++ b/Atencion.html
@@ -17,7 +17,7 @@
             <div class="container extras">
                 <img src="./img/horus-s.png" class="img-fluid justify-content-center" alt="Imagen" style="max-width: 50%; height: auto;">
             </div>
-            <h2 class="text-center mt-4 mb-4">Resumen General De Comportamiento en Atención de TATs (De la Ciudad)</h2>
+            <h2 class="text-center mt-4 mb-4">Resumen General De Comportamiento en Atención de TATs (Atencion a grupos especiales)</h2>
         </header>
         <div>
             <button class="ir shadow volver" data-producto="Ciudad">
@@ -26,27 +26,28 @@
         </div>
         <br />
         <!-- Dependencia 1: TESORERIA -->
-        <div class="row mt-4 mb-4">
+        <div class="row mt-4 mb-4 ">
             <div class="col-md-4">
-            <div class="chart-title">Educación</div>
+            <div class="chart-title h3">Educación</div>
             <div id="chart_educacion"></div>
             </div>
 
             <!-- Dependencia 2: ADMINISTRACIÓN -->
             <div class="col-md-4">
-            <div class="chart-title">Igualdad de Género</div>
+            <div class="chart-title h3">Igualdad de Género</div>
             <div id="chart_igualdad"></div>
             </div>
 
             <!-- Dependencia 3: GOBERNACIÓN -->
             <div class="col-md-4">
-            <div class="chart-title">DIF</div>
+            <div class="chart-title h3">DIF</div>
             <div id="chart_dif"></div>
             </div>
         </div>
 
     </div>
     <script src="./js/GraficaAtencion.js"></script>
+    <script src="./js/Hipervinculos.js"></script>
 </body>
 
 </html>
