--- a/Ciudad.html
+++ b/Ciudad.html
@@ -31,19 +31,19 @@
         <!-- Dependencia 1: TESORERIA -->
         <div class="row mt-4 mb-4">
             <div class="col-md-4">
-                <div class="chart-title">Obras Públicas</div>
+                <div class="chart-title h3">Obras Públicas</div>
                 <div id="chart_obras"></div>
             </div>
 
             <!-- Dependencia 2: ADMINISTRACIÓN -->
             <div class="col-md-4">
-                <div class="chart-title">Servicios Públicos</div>
+                <div class="chart-title h3">Servicios Públicos</div>
                 <div id="chart_servicios"></div>
             </div>
 
             <!-- Dependencia 3: GOBERNACIÓN -->
             <div class="col-md-4">
-                <div class="chart-title">OPDAPAS</div>
+                <div class="chart-title h3">OPDAPAS</div>
                 <div id="chart_opdapas"></div>
             </div>
         </div>
@@ -51,19 +51,19 @@
         <!-- Dependencia 4: DESARROLLO ECONÓMICO, TURÍSTICO Y ARTESANAL -->
         <div class="row mt-4 mb-4 justify-content-center">
             <div class="col-md-4">
-                <div class="chart-title">Gerencia de la Ciudad</div>
+                <div class="chart-title h3">Gerencia de la Ciudad</div>
                 <div id="chart_gerencia"></div>
             </div>
 
             <!-- Dependencia 5: DESARROLLO SOCIAL -->
             <div class="col-md-4">
-                <div class="chart-title">Medio Ambiente</div>
+                <div class="chart-title h3">Medio Ambiente</div>
                 <div id="chart_medio"></div>
             </div>
 
             <!-- Dependencia 5: DESARROLLO SOCIAL -->
             <div class="col-md-4">
-                <div class="chart-title">Desarrollo Urbano y Metropolitano</div>
+                <div class="chart-title h3">Desarrollo Urbano y Metropolitano</div>
                 <div id="chart_desarrollo"></div>
             </div>
         </div>
