--- a/Legal.html
+++ b/Legal.html
@@ -17,7 +17,7 @@
             <div class="container extras">
                 <img src="./img/horus-s.png" class="img-fluid justify-content-center" alt="Imagen" style="max-width: 50%; height: auto;">
             </div>
-            <h2 class="text-center mt-4 mb-4">Resumen General De Comportamiento en Atención de TATs (De la Ciudad)</h2>
+            <h2 class="text-center mt-4 mb-4">Resumen General De Comportamiento en Atención de TATs (Legal)</h2>
         </header>
         <div>
             <button class="ir shadow volver" data-producto="Ciudad">
