--- a/Social.html
+++ b/Social.html
@@ -18,7 +18,7 @@
                 <img src="./img/horus-s.png" class="img-fluid justify-content-center" alt="Imagen"
                     style="max-width: 50%; height: auto;">
             </div>
-            <h2 class="text-center mt-4 mb-4">Resumen General De Comportamiento en Atención de TATs (De la Ciudad)</h2>
+            <h2 class="text-center mt-4 mb-4">Resumen General De Comportamiento en Atención de TATs (Social)</h2>
         </header>
         <br />
         <div>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <!-- Dependencia 2: ADMINISTRACIÓN -->
-            <div class="col-md-4">
+            <div class="col-md-4 text-center">
                 <div class="chart-title h3">Seguridad Pública</div>
                 <div id="chart_seguridad"></div>
             </div>
@@ -49,20 +49,20 @@
                 <div id="chart_proteccion"></div>
             </div>
         </div>
-        <div class="row mt-4 mb-4 justify-content-center">
+        <div class="row mt-4 mb-4 text-center">
             <div class="col-md-4">
                 <div class="chart-title h3">Cultura</div>
                 <div id="chart_cultura"></div>
             </div>
 
             <!-- Dependencia 5: DESARROLLO SOCIAL -->
-            <div class="col-md-4">
+            <div class="col-md-4 text-center">
                 <div class="chart-title h3">Desarrollo Ecónomico, Turístico y Artesanal</div>
                 <div id="chart_desarrollo"></div>
             </div>
 
             <!-- Dependencia 5: DESARROLLO SOCIAL -->
-            <div class="col-md-4">
+            <div class="col-md-4 text-center">
                 <div class="chart-title h3">IMCUFIDEM</div>
                 <div id="chart_imcufidem"></div>
                 <div class="chart-footer"><a href="#">Ir</a></div>
@@ -75,7 +75,7 @@
                 <div id="chart_comunicacion"></div>
             </div>
             <!-- Dependencia 3: GOBERNACIÓN -->
-            <div class="col-md-4">
+            <div class="col-md-4 text-center">
                 <div class="chart-title h3">Secretaría Técnica del Consejo Municipal de Seguridad Pública</div>
                 <div id="chart_secretaria" data-producto="Defensoria"></div>
             </div>
