--- a/index.html
+++ b/index.html
@@ -39,15 +39,14 @@
                         <ul class="list-group list-group-flush text-center">
                             <li class="list-group-item bg-light" style="color:#204f7b;">
                                 <h2><img src="img/medalla.png" class="img-fluid me-2" style="width:20px;"
-                                        alt="">Protección
-                                    Civil</h2>
+                                        alt="">SMDIF</h2>
 
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>SMDIF</h2>
+                                <h2>Cultura</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Cultura</h2>
+                                <h2>IMCUFIDEM</h2>
                             </li>
                         </ul>
                     </div>
@@ -55,13 +54,13 @@
                         <h1 class="text-center mb-4" style="background:#b63329; color:#ffff;">Peores Rendimientos</h1>
                         <ul class="list-group list-group-flush text-center">
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>IMCUFIDEM</h2>
+                                <h2>D. Social</h2>
+                            </li>
+                            <li class="list-group-item bg-light" style="color:#204f7b;">
+                                <h2>Gobernación</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
                                 <h2>Educación</h2>
-                            </li>
-                            <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Gobierno Digital</h2>
                             </li>
                         </ul>
                     </div>
@@ -69,7 +68,7 @@
             </div>
 
             <!--Graficas por dependencia-->
-            <br><br><br><br>
+            <br>
             <div class="shadow p-3 mb-5 bg-light rounded mt-4">
                 <!-- Dependencia 1: TESORERIA -->
                 <div class="row mt-4 mb-4 justify-content-center">
