Fix error Rendimiento

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                     <h2>D. Social</h2>
                                 </li>
                                 <li class="list-group-item bg-light" style="color:#204f7b;">
-                                    <h2>Asuntos Religiosos</h2>
+                                    <h2>Gobierno Digital</h2>
                                 </li>
                             </ul>
                         </div>
