--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Presidencia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/stylesheet.css">
 </head>
 
 <body class="bg-body-secondary">
@@ -41,12 +41,12 @@
                             <ul class="list-group list-group-flush text-center">
                                 <li class="list-group-item bg-light" style="color:#204f7b;">
                                     <h2><img src="img/medalla.png" class="img-fluid me-2" style="width:20px;"
-                                            alt="">Tesoreria
+                                            alt="">Tesorería
                                     </h2>
 
                                 </li>
                                 <li class="list-group-item bg-light" style="color:#204f7b;">
-                                    <h2>Seguridad Publica</h2>
+                                    <h2>Seguridad Pública</h2>
                                 </li>
                                 <li class="list-group-item bg-light" style="color:#204f7b;">
                                     <h2>Proteción Civil</h2>
