--- a/Legal.html
+++ b/Legal.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- ApexCharts -->
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/stylesheet.css">
 </head>
 
 <body>
@@ -27,19 +27,19 @@
         <br />
         <div class="row mt-4 mb-4 justify-content-center">
             <div class="col-md-4 text-center">
-            <div class="chart-title">Consejería Jurídica</div>
+            <div class="chart-title h3">Consejería Jurídica</div>
             <div id="chart_consejeria"></div>
             </div>
 
             <!-- Dependencia 2: ADMINISTRACIÓN -->
             <div class="col-md-4 text-center">
-            <div class="chart-title">Contraloría Municipal</div>
+            <div class="chart-title h3">Contraloría Municipal</div>
             <div id="chart_contraloria"></div>
             </div>
 
             <!-- Dependencia 3: GOBERNACIÓN -->
             <div class="col-md-4 text-center">
-            <div class="chart-title">Gobernación</div>
+            <div class="chart-title h3">Gobernación</div>
             <div id="chart_gobernacion"></div>
             </div>
         </div>
@@ -47,13 +47,13 @@
         <!-- Dependencia 4: DESARROLLO ECONÓMICO, TURÍSTICO Y ARTESANAL -->
         <div class="row mt-4 mb-4 justify-content-center">
             <div class="col-md-4 text-center">
-            <div class="chart-title">Gobierno por Resultados</div>
+            <div class="chart-title h3">Gobierno por Resultados</div>
             <div id="chart_gobierno"></div>
             </div>
 
             <!-- Dependencia 5: DESARROLLO SOCIAL -->
             <div class="col-md-4 text-center">
-            <div class="chart-title">Transparencia</div>
+            <div class="chart-title h3">Transparencia</div>
             <div id="chart_transparencia"></div>
             </div>
         </div>
