--- a/index.html
+++ b/index.html
@@ -18,138 +18,136 @@
             </div>
         </div>
     </div>
-        <div class="col">
-            <div class="p-4">
-                <div class="container-fluid shadow p-3 mb-5 bg-light rounded mt-4">
-                    <div class="row mt-4 mb-4">
-                        <!-- Gráfica de Barras -->
-                        <div class="col-md-6 col-12">
-                            <div id="barChart"></div>
-                        </div>
-                        <!-- Gráfica de Dona -->
-                        <div class="col-md-6 col-12 d-flex justify-content-center">
-                            <div id="chart_rendimiento"></div>
-                        </div>
+    <div class="col">
+        <div class="p-4">
+            <div class="container-fluid shadow p-3 mb-5 bg-light rounded mt-4">
+                <div class="row mt-4 mb-4">
+                    <!-- Gráfica de Barras -->
+                    <div class="col-md-6 col-12">
+                        <div id="barChart"></div>
+                    </div>
+                    <!-- Gráfica de Dona -->
+                    <div class="col-md-6 col-12 d-flex justify-content-center">
+                        <div id="chart_rendimiento"></div>
                     </div>
                 </div>
-                <!--Mejores y peores rendimientos-->
-                <div class="shadow p-3 mb-5 bg-light rounded mt-4">
-                    <div class="row mb-4">
-                        <div class="col-md-6">
-                            <h1 class="text-center mb-4" style="background:#60c34c; color:#ffff;">Mejores Rendimientos
-                            </h1>
-                            <ul class="list-group list-group-flush text-center">
-                                <li class="list-group-item bg-light" style="color:#204f7b;">
-                                    <h2><img src="img/medalla.png" class="img-fluid me-2" style="width:20px;"
-                                            alt="">Tesorería
-                                    </h2>
+            </div>
+            <!--Mejores y peores rendimientos-->
+            <div class="shadow p-3 mb-5 bg-light rounded mt-4">
+                <div class="row mb-4">
+                    <div class="col-md-6">
+                        <h1 class="text-center mb-4" style="background:#60c34c; color:#ffff;">Mejores Rendimientos
+                        </h1>
+                        <ul class="list-group list-group-flush text-center">
+                            <li class="list-group-item bg-light" style="color:#204f7b;">
+                                <h2><img src="img/medalla.png" class="img-fluid me-2" style="width:20px;"
+                                        alt="">Tesorería
+                                </h2>
 
-                                </li>
-                                <li class="list-group-item bg-light" style="color:#204f7b;">
-                                    <h2>Seguridad Pública</h2>
-                                </li>
-                                <li class="list-group-item bg-light" style="color:#204f7b;">
-                                    <h2>Proteción Civil</h2>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-md-6">
-                            <h1 class="text-center mb-4" style="background:#b63329; color:#ffff;">Peores Rendimientos
-                            </h1>
-                            <ul class="list-group list-group-flush text-center">
-                                <li class="list-group-item bg-light" style="color:#204f7b;">
-                                    <h2>Gobernación</h2>
-                                </li>
-                                <li class="list-group-item bg-light" style="color:#204f7b;">
-                                    <h2>D. Social</h2>
-                                </li>
-                                <li class="list-group-item bg-light" style="color:#204f7b;">
-                                    <h2>Gobierno Digital</h2>
-                                </li>
-                            </ul>
-                        </div>
+                            </li>
+                            <li class="list-group-item bg-light" style="color:#204f7b;">
+                                <h2>Seguridad Pública</h2>
+                            </li>
+                            <li class="list-group-item bg-light" style="color:#204f7b;">
+                                <h2>Proteción Civil</h2>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6">
+                        <h1 class="text-center mb-4" style="background:#b63329; color:#ffff;">Peores Rendimientos
+                        </h1>
+                        <ul class="list-group list-group-flush text-center">
+                            <li class="list-group-item bg-light" style="color:#204f7b;">
+                                <h2>Gobernación</h2>
+                            </li>
+                            <li class="list-group-item bg-light" style="color:#204f7b;">
+                                <h2>D. Social</h2>
+                            </li>
+                            <li class="list-group-item bg-light" style="color:#204f7b;">
+                                <h2>Gobierno Digital</h2>
+                            </li>
+                        </ul>
                     </div>
                 </div>
+            </div>
 
-                <!--Graficas por dependencia-->
-                <br>
-                <div class="shadow p-3 mb-5 bg-light rounded mt-4">
-                    <!-- Dependencia 1: TESORERIA -->
-                    <div class="row mt-4 mb-4 justify-content-center">
-                        <!-- Dependencia 1: CIUDAD -->
-                        <div class="col-md-4">
-                            <div class="chart-title h3">De la Ciudad</div>
-                            <div id="chart_ciudad"></div>
-                            <button class="ir shadow" data-producto="Ciudad">
-                                <img src="./img/flecha.png" Ver" />
-                            </button>
+            <!--Graficas por dependencia-->
+            <br>
+            <div class="shadow p-3 mb-5 bg-light rounded mt-4">
+                <!-- Dependencia 1: TESORERIA -->
+                <div class="row mt-4 mb-4 justify-content-center">
+                    <!-- Dependencia 1: CIUDAD -->
+                    <div class="col-md-4">
+                        <div class="chart-title h3">De la Ciudad</div>
+                        <div id="chart_ciudad"></div>
+                        <button class="ir shadow" data-producto="Ciudad">
+                            <img src="./img/flecha.png" alt="Ver" />
+                        </button>
+                    </div>
 
-
-                        </div>
-
-                        <!-- Dependencia 2: SOCIAL -->
-                        <div class="col-md-4 text-center">
-                            <div class="chart-title h3">Social y de Resultados</div>
-                            <div id="chart_social"></div>
-                            <button class="ir shadow" data-producto="Social">
-                                <img src="./img/flecha.png" Ver" />
-                            </button>
-                        </div>
-
-
+                    <!-- Dependencia 2: SOCIAL -->
+                    <div class="col-md-4 text-center">
+                        <div class="chart-title h3">Social y de Resultados</div>
+                        <div id="chart_social"></div>
+                        <button class="ir shadow" data-producto="Social">
+                            <img src="./img/flecha.png" alt="Ver" />
+                        </button>
                     </div>
 
 
-                    <!-- Dependencia 4: DESARROLLO ECONÓMICO, TURÍSTICO Y ARTESANAL -->
-                    <div class="row mt-4 mb-4 justify-content-center">
-                        <div class="col-md-4">
-                            <div class="chart-title h3">Legal y de Planeación</div>
-                            <div id="chart_legal"></div>
-                            <button class="ir shadow" data-producto="Legal">
-                                <img src="./img/flecha.png" Ver" />
-                            </button>
-                        </div>
-                        <!-- Dependencia 3: ADMINISTRATIVO -->
-                        <div class="col-md-4 text-center">
-                            <div class="chart-title h3">Administrativo Financiero</div>
-                            <div id="chart_administrativo"></div>
-                            <button class="ir shadow" data-producto="Administrativo">
-                                <img src="./img/flecha.png" Ver" />
-                            </button>
-                        </div>
-                        <!-- Dependencia 5: DESARROLLO SOCIAL -->
-                        <div class="col-md-4 text-center">
-                            <div class="chart-title h3">Atención a Grupos Especiales</div>
-                            <div id="chart_atencion"></div>
-                            <button class="ir shadow" data-producto="Atencion">
-                                <img src="./img/flecha.png" Ver" />
-                            </button>
-                        </div>
+                </div>
 
-                        <div class="col-md-4 text-center">
-                            <div class="chart-title h3">Atención Ciudadana</div>
-                            <div id="chart_ciudadana" data-producto="Ciudadana"></div>
-                        </div>
 
-                        <!-- Dependencia 2: ADMINISTRACIÓN -->
-                        <div class="col-md-4 text-center">
-                            <div class="chart-title h3">Defensoría Municipal de los Derechos Humanos</div>
-                            <div id="chart_defensoria" data-producto="Secretaria"></div>
-                        </div>
+                <!-- Dependencia 4: DESARROLLO ECONÓMICO, TURÍSTICO Y ARTESANAL -->
+                <div class="row mt-4 mb-4 justify-content-center">
+                    <div class="col-md-4">
+                        <div class="chart-title h3">Legal y de Planeación</div>
+                        <div id="chart_legal"></div>
+                        <button class="ir shadow" data-producto="Legal">
+                            <img src="./img/flecha.png" alt="Ver" />
+                        </button>
+                    </div>
+                    <!-- Dependencia 3: ADMINISTRATIVO -->
+                    <div class="col-md-4 text-center">
+                        <div class="chart-title h3">Administrativo Financiero</div>
+                        <div id="chart_administrativo"></div>
+                        <button class="ir shadow" data-producto="Administrativo">
+                            <img src="./img/flecha.png" alt="Ver" />
+                        </button>
+                    </div>
+                    <!-- Dependencia 5: DESARROLLO SOCIAL -->
+                    <div class="col-md-4 text-center">
+                        <div class="chart-title h3">Atención a Grupos Especiales</div>
+                        <div id="chart_atencion"></div>
+                        <button class="ir shadow" data-producto="Atencion">
+                            <img src="./img/flecha.png" alt="Ver" />
+                        </button>
+                    </div>
+
+                    <div class="col-md-4 text-center">
+                        <div class="chart-title h3">Atención Ciudadana</div>
+                        <div id="chart_ciudadana" data-producto="Ciudadana"></div>
+                    </div>
+
+                    <!-- Dependencia 2: ADMINISTRACIÓN -->
+                    <div class="col-md-4 text-center">
+                        <div class="chart-title h3">Defensoría Municipal de los Derechos Humanos</div>
+                        <div id="chart_defensoria" data-producto="Secretaria"></div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <!-- Bootstrap JS (asegúrate de incluir Popper.js si estás usando Bootstrap 4) -->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Tu script personalizado -->
-        <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
-        <script src="./js/GraficaBarras.js"></script>
-        <script src="./js/GraficaDona.js"></script>
-        <script src="./js/GraficasDependencias.js"></script>
-        <script src="./js/Hipervinculos.js"></script>
-        <script src="./js/Funcionalidad.js"></script>
+    <!-- Bootstrap JS (asegúrate de incluir Popper.js si estás usando Bootstrap 4) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Tu script personalizado -->
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <script src="./js/GraficaBarras.js"></script>
+    <script src="./js/GraficaDona.js"></script>
+    <script src="./js/GraficasDependencias.js"></script>
+    <script src="./js/Hipervinculos.js"></script>
+    <script src="./js/Funcionalidad.js"></script>
 </body>
 
 </html>
