Update report every week

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Seguridad Pública</h2>
+                                <h2>Desarrollo urbano y metropolitano</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Proteción Civil</h2>
+                                <h2>Administración</h2>
                             </li>
                         </ul>
                     </div>
@@ -58,13 +58,13 @@
                         </h1>
                         <ul class="list-group list-group-flush text-center">
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Gobernación</h2>
-                            </li>
-                            <li class="list-group-item bg-light" style="color:#204f7b;">
                                 <h2>D. Social</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
                                 <h2>Gobierno Digital</h2>
+                            </li>
+                            <li class="list-group-item bg-light" style="color:#204f7b;">
+                                <h2>Obras Publicas</h2>
                             </li>
                         </ul>
                     </div>
