--- a/Login.html
+++ b/Login.html
@@ -8,45 +8,50 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Agrega el enlace CDN de jQuery antes de los scripts que lo utilizan -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gotham:wght@400;500&display=swap">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
     <style>
-        body{
-            background-image: url('./img/Fondo.png');
+        body {
+            /*background-image: url('./img/Fondo.png');*/
+            background: #3ec3fd;
+            background: -webkit-linear-gradient(to right, #bf5f8f, #FF8C00, #37c7f3);
+            background: linear-gradient(to right, #c54284, #FF8C00, #37c7f3);
         }
     </style>
 </head>
 
 <body>
-    <div class="wrapper">
+
+    <div class="logo-container">
+        <img src="./img/horus-s.png" alt="Logo" class="logo">
+    </div>
+
+    <div class="wrapper mt-0">
         <div class="inner">
-            <form action="">
-                <h3>Inicia Sesion</h3>
+            <form action="" method="post">
+                <h3>Inicia Sesión</h3>
                 <div class="form-row">
                     <div class="form-wrapper">
-                        <label for="">Usuario *</label>
-                        <input type="text" class="form-control" placeholder="Ingresa tu Usuario">
+                        <label for="usuario">Usuario *</label>
+                        <input type="text" id="usuario" name="usuario" class="form-control">
                     </div>
                     <div class="form-wrapper">
-                        <label for="">Contraseña *</label>
-                        <input type="password" class="form-control" placeholder="Ingresa tu Contraseña">
+                        <label for="contrasena">Contraseña *</label>
+                        <input type="password" id="contrasena" name="contrasena" class="form-control">
                     </div>
                 </div>
-                <button data-text="Vamos" id="loginButton">
+                <button data-text="Vamos" id="loginButton" type="submit">
                     <span>Entrar</span>
                 </button>
                 <p class="text-body-secondary">
                     <br>¿Olvidaste tu Usuario o Contraseña? <a href="#" class="text-reset">Contactanos</a>.
-                  </p>
+                </p>
             </form>
         </div>
     </div>
-
-    <!-- Agrega el enlace CDN de Bootstrap JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 </body>
 
 </html>
