--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Desarrollo urbano y metropolitano</h2>
+                                <h2>Desarrollo Urbano y Metropolitano</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
                                 <h2>Administración</h2>
@@ -64,7 +64,7 @@
                                 <h2>Gobierno Digital</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Obras Publicas</h2>
+                                <h2>Obras Públicas</h2>
                             </li>
                         </ul>
                     </div>
