Fix Size PDF 2.0

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </div>
                     <div class="toast-body d-flex align-items-center justify-content-center">
                         <!-- Agrega un iframe con la fuente del PDF -->
-                        <iframe src="./docs/9MarzoGeneral.pdf" width="100%" height="500" style="border: none;"></iframe>
+                        <iframe src="./docs/9MarzoGeneral.pdf" width="100%" height="100%" style="border: none;"></iframe>
                     </div>
                 </div>
             </div>      
@@ -68,7 +68,7 @@
                         </div>
                         <div class="toast-body d-flex align-items-center justify-content-center">
                             <!-- Agrega un iframe con la fuente del PDF -->
-                            <iframe src="./docs/9MARZO.pdf" width="100%" height="500" style="border: none;"></iframe>
+                            <iframe src="./docs/9MARZO.pdf" width="100%" height="100%" style="border: none;"></iframe>
                         </div>
                     </div>
                 </div>
