Remove Plugin, Add Screen PDF

--- a/index.html
+++ b/index.html
@@ -33,46 +33,19 @@
                     <div class="col-md-1">
                         <h6 style="font-size: 80%;">Rendimientos</h6>
                         <img src="./img/pdf.png" class="img-fluid me-2" style="width:35px; cursor: pointer;"
-                            title="Ver Reporte General" id="verPdfGeneral">
+                            title="Ver Reporte General" id="verPdfGeneral" onclick="openPDF('./docs/9MarzoGeneral.pdf')">
                     </div>
                 </div>
             </div>
-            <div class="position-fixed top-0 start-30 translate-middle-x p-3" style="z-index: 11; width: 95%; left: 50%;">
-                <div id="pdfToastGeneral" class="toast d-none" role="alert" aria-live="assertive" aria-atomic="true"
-                     data-bs-autohide="false" data-bs-delay="0" style="width: 100%; max-width: none;">
-                    <div class="toast-header">
-                        <strong class="me-auto">Reporte General</strong>
-                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                    </div>
-                    <div class="toast-body d-flex align-items-center justify-content-center">
-                        <!-- Agrega un iframe con la fuente del PDF -->
-                        <iframe src="./docs/9MarzoGeneral.pdf" width="130%" height="800" style="border: none;"></iframe>
-                    </div>
-                </div>
-            </div>      
             <!--Mejores y peores rendimientos-->
             <div class="shadow p-3 mb-5 bg-light rounded mt-4">
                 <div class="row">
                     <h1 class="text-center mb-4" style="background:#204f7be7; color:#ffff;">Resumen
                         <img src="./img/pdf.png" class="img-fluid me-2" style="width:35px; cursor: pointer;"
-                            title="Ver Mejores y Peores Rendimientos" id="verPdf">
+                            title="Ver Mejores y Peores Rendimientos" id="verPdf" onclick="openPDF('./docs/9MARZO.pdf')">
                     </h1>
                 </div>
 
-                <div class="position-fixed top-0 start-25 translate-middle-x p-3" style="z-index: 11; width: 95%; left: 50%;">
-                    <div id="pdfToast" class="toast d-none" role="alert" aria-live="assertive" aria-atomic="true"
-                        data-bs-autohide="false" data-bs-delay="0" style="width: 100%; max-width: none;">
-                        <div class="toast-header">
-                            <strong class="me-auto">Resumen</strong>
-                            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                        </div>
-                        <div class="toast-body d-flex align-items-center justify-content-center">
-                            <!-- Agrega un iframe con la fuente del PDF -->
-                            <iframe src="./docs/9MARZO.pdf" width="100%" height="800" style="border: none;"></iframe>
-                        </div>
-                    </div>
-                </div>
-                
 
                 <div class="row mb-4">
                     <div class="col-md-6">
@@ -178,7 +151,11 @@
             </div>
         </div>
     </div>
-
+    <script>
+        function openPDF(url) {
+            window.open(url, '_blank');
+        }
+    </script>
     <!-- Bootstrap JS (asegúrate de incluir Popper.js si estás usando Bootstrap 4) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Tu script personalizado -->
