--- a/Login.html
+++ b/Login.html
@@ -14,9 +14,9 @@
     <style>
         body {
             /*background-image: url('./img/Fondo.png');*/
-            background: #3ec3fd;
-            background: -webkit-linear-gradient(to right, #bf5f8f, #FF8C00, #37c7f3);
-            background: linear-gradient(to right, #c54284, #FF8C00, #37c7f3);
+            background: #ffffff;
+            /*background: -webkit-linear-gradient(to right, #bf5f8f, #FF8C00, #37c7f3);
+            background: linear-gradient(to right, #c54284, #FF8C00, #37c7f3);*/
         }
     </style>
 </head>
