Fix Position Buttons index

--- a/index.html
+++ b/index.html
@@ -90,12 +90,14 @@
                 <!-- Dependencia 1: TESORERIA -->
                 <div class="row mt-4 mb-4 justify-content-center">
                     <!-- Dependencia 1: CIUDAD -->
-                    <div class="col-md-4">
+                    <div class="col-md-4 ">
                         <div class="chart-title h3">De la Ciudad</div>
                         <div id="chart_ciudad"></div>
-                        <button class="ir shadow" data-producto="Ciudad">
-                            <img src="./img/flecha.png" alt="Ver" />
-                        </button>
+                        <div class="text-center">
+                            <button class="ir shadow" data-producto="Ciudad">
+                                <img src="./img/flecha.png" alt="Ver" />
+                            </button>
+                        </div>
                     </div>
 
                     <!-- Dependencia 2: SOCIAL -->
@@ -106,8 +108,6 @@
                             <img src="./img/flecha.png" alt="Ver" />
                         </button>
                     </div>
-
-
                 </div>
 
 
@@ -116,9 +116,11 @@
                     <div class="col-md-4">
                         <div class="chart-title h3">Legal y de Planeación</div>
                         <div id="chart_legal"></div>
-                        <button class="ir shadow" data-producto="Legal">
-                            <img src="./img/flecha.png" alt="Ver" />
-                        </button>
+                        <div class="text-center">
+                            <button class="ir shadow" data-producto="Legal">
+                                <img src="./img/flecha.png" alt="Ver" />
+                            </button>
+                        </div>
                     </div>
                     <!-- Dependencia 3: ADMINISTRATIVO -->
                     <div class="col-md-4 text-center">
@@ -153,7 +155,8 @@
     </div>
     <script>
         function openPDF(url) {
-            window.open(url, '_blank');
+            <iframe src="url" height="400" width="600" title="Ejemplo de Frame"></iframe>
+            //window.open(url, '_blank');
         }
     </script>
     <!-- Bootstrap JS (asegúrate de incluir Popper.js si estás usando Bootstrap 4) -->
